--- a/index.html
+++ b/index.html
@@ -61,6 +61,51 @@
           </div>
         </a>
       </li>
+
+      <li>
+        <a onclick="getLink('26/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">26/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('25/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">25/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('24/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">24/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('23/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">23/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('22/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">22/10/2023</span>
+          </div>
+        </a>
+      </li>
      
     </ul>
   </div>
