--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <ul class="dates-list">
 
       <li>
+        <a onclick="getLink('08/12/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">08/12/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
         <a onclick="getLink('07/12/2023')" class="date-link" target="_blank">
           <div class="date-card">
             <img src="files/calendario-icon.png" alt="Ícone de Calendário">
@@ -58,6 +67,51 @@
           <div class="date-card">
             <img src="files/calendario-icon.png" alt="Ícone de Calendário">
             <span class="date">05/12/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('31/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">31/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('30/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">30/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('29/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">29/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('28/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">28/10/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('27/10/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">27/10/2023</span>
           </div>
         </a>
       </li>
