--- a/index.html
+++ b/index.html
@@ -72,6 +72,51 @@
       </li>
 
       <li>
+        <a onclick="getLink('05/11/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário">
+            <span class="date">05/11/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('04/11/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">04/11/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('03/11/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">03/11/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('02/11/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">02/11/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
+        <a onclick="getLink('01/11/2023')" class="date-link" target="_blank">
+          <div class="date-card">
+            <img src="files/calendario-icon.png" alt="Ícone de Calendário"> 
+            <span class="date">01/11/2023</span>
+          </div>
+        </a>
+      </li>
+
+      <li>
         <a onclick="getLink('31/10/2023')" class="date-link" target="_blank">
           <div class="date-card">
             <img src="files/calendario-icon.png" alt="Ícone de Calendário">
